# TinyPPM

./: .gitignore  CMakeLists.txt  LICENSE  README.md  antiNoising.py  dipersion.py  main.cpp  run.sh
monitors/: manager.cpp  manager.h
objects/: Object.h  bezier2D.h  bezierObject.h  kdTree.cpp  kdTree.h  mesh.cpp  mesh.h  plane.cpp  plane.h  sphere.cpp  sphere.h  triangle.h
utils/: normal_texture.cpp  normal_texture.h  texture.cpp  texture.h  utils.cpp  utils.h
